--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
     background-color: bisque;
 }
 
+* {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 h1 {
     font-size: 150%;
 }
