added links css
added links css

--- a/web115/styles/default.css
+++ b/web115/styles/default.css
@@ -9,3 +9,12 @@ body {
 h1 {
     font-size: 150%;
 }
+
+a:link {
+    color: #B94527;
+}
+
+a:hover {
+    color: #F8B45C;
+    text-decoration: underline;
+}
