change a:hover color and shadow
change a:hover color and shadow ease of reading

--- a/web115/styles/default.css
+++ b/web115/styles/default.css
@@ -28,8 +28,8 @@ a:visited {
 }
 
 a:hover {
-    color: #F8B45C;
-    text-shadow: .1em .1em .1em #393E41;
+    color: #FFEB3B;
+    text-shadow: .1em .1em .4em #393E41;
     text-decoration: underline;
 }
 
