--- a/web115/components/footer.html
+++ b/web115/components/footer.html
@@ -12,9 +12,9 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html"
-            target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
+        <a href="http://validator.w3.org/check?uri=referer" id="validation_link_html" target="_blank"><img
+                src="images/html_validation_button.gif" alt="html validation"></a>
+        <a href=href="http://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css" target="_blank"><img
+                src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
     </nav>
 </footer>
