--- a/web115/components/footer.html
+++ b/web115/components/footer.html
@@ -14,7 +14,7 @@
         <hr>
         <a href="http://validator.w3.org/check?uri=referer" id="validation_link_html" target="_blank"><img
                 src="images/html_validation_button.gif" alt="html validation"></a>
-        <a href=href="http://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css" target="_blank"><img
+        <a href="http://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css" target="_blank"><img
                 src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
     </nav>
 </footer>
