--- a/web115/components/footer.html
+++ b/web115/components/footer.html
@@ -16,5 +16,6 @@
                 src="images/html_validation_button.gif" alt="html validation"></a>
         <a href="http://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css" target="_blank"><img
                 src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
+        <script src="scripts/linkValidation.js"></script>
     </nav>
 </footer>
