updated header and footer css
updated header and footer css, added missing fizzbuzz0 link

--- a/web115/components/header.html
+++ b/web115/components/header.html
@@ -5,5 +5,7 @@
         <a href="introduction.html">Introduction</a>
         <a href="contract.html">Contract</a>
         <a href="brand.html">Brand</a>
+        <a href="fizzbuzz0.html">FizzBuzz0</a>
+        <hr>
     </nav>
 </header>
