--- a/web115/components/header.html
+++ b/web115/components/header.html
@@ -1,11 +1,10 @@
 <header>
-    <h1>Gina W's Gawky Wraith | WEB115</h1>
+    <h1 id="h1Main">Gina W's Gawky Wraith | WEB115</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="introduction.html">Introduction</a>
         <a href="contract.html">Contract</a>
         <a href="brand.html">Brand</a>
         <a href="fizzbuzz0.html">FizzBuzz0</a>
-        <hr>
     </nav>
 </header>
