--- a/web115/components/footer.html
+++ b/web115/components/footer.html
@@ -9,7 +9,7 @@
         <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
-        Page Designed by WhitsGits
+        <p>Page Designed by WhitsGits</p>
         <hr>
         <a href="http://validator.w3.org/check?uri=referer" id="validation_link_html" target="_blank"><img
                 src="images/html_validation_button.gif" alt="html validation"></a>
