--- a/web115/styles/default.css
+++ b/web115/styles/default.css
@@ -67,7 +67,7 @@ header nav a {
     border: .22em solid #795548;
     border-radius: 5em;
     background-color: #F8B45C;
-    margin: .5em 0em .5em;
+    margin: .5em .6em .5em;
     padding: .3em;
 }
 
