--- a/web115/components/header.html
+++ b/web115/components/header.html
@@ -6,5 +6,7 @@
         <a href="contract.html">Contract</a>
         <a href="brand.html">Brand</a>
         <a href="fizzbuzz0.html">FizzBuzz0</a>
+        <a href="fizzbuzz1.html">FizzBuzz1</a>
+        <a href="fizzbuzz2.html">FizzBuzz2</a>
     </nav>
 </header>
