--- a/web115/components/header.html
+++ b/web115/components/header.html
@@ -5,8 +5,15 @@
         <a href="introduction.html">Introduction</a>
         <a href="contract.html">Contract</a>
         <a href="brand.html">Brand</a>
-        <a href="fizzbuzz0.html">FizzBuzz0</a>
-        <a href="fizzbuzz1.html">FizzBuzz1</a>
-        <a href="fizzbuzz2.html">FizzBuzz2</a>
+        <div class="fizzMenu">
+            <a>FizzBuzz</a>
+            <div class="fizzItems">
+                <a href="fizzbuzz1.html">FizzBuzz0</a>
+                <a href="fizzbuzz1.html">FizzBuzz1</a>
+                <a href="fizzbuzz2.html">FizzBuzz2</a>
+                <a href="fizzbuzz2.html">FizzBuzz3</a>
+                <a href="fizzbuzz2.html">FizzBuzz4</a>
+            </div>
+        </div>
     </nav>
 </header>
