--- a/web115/components/header.html
+++ b/web115/components/header.html
@@ -1,6 +1,7 @@
 <header>
-    <h1 id="h1Main"><a href="index.html" id="homeLogo"><img src="images/icon60h.svg"></a>Gina W's Gawky Wraith | WEB115
+    <h1><a href="index.html" id="homeLogo"><img src="images/icon60h.svg"></a>Gina W's Gawky Wraith | WEB115
     </h1>
+    <p>Your Portal to Original RPG Maps</p>
     <nav>
         <a href="index.html">Home</a>
         <a href="introduction.html">Introduction</a>
