--- a/web115/onepagesite/components/header.html
+++ b/web115/onepagesite/components/header.html
@@ -1,12 +1,21 @@
 <header>
-    <h1 id="h1Main">Gina W's Gawky Wraith | WEB115</h1>
+    <h1><a href="index.html" id="homeLogo"><img src="images/icon60h.svg"></a>Gina W's Gawky Wraith | WEB115
+    </h1>
+    <p>Your Portal to Original RPG Maps</p>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="introduction.html">Introduction</a>
-        <a href="contract.html">Contract</a>
-        <a href="brand.html">Brand</a>
-        <a href="fizzbuzz0.html">FizzBuzz0</a>
-        <a href="fizzbuzz1.html">FizzBuzz1</a>
-        <a href="fizzbuzz2.html">FizzBuzz2</a>
+        <a href="/web115/index.html">Home</a>
+        <a href="/web115/introduction.html">Introduction</a>
+        <a href="/web115/contract.html">Contract</a>
+        <a href="/web115/brand.html">Brand</a>
+        <div class="fizzMenu">
+            <a>FizzBuzz</a>
+            <div class="fizzItems">
+                <a href="/web115/fizzbuzz0.html">FizzBuzz 0</a>
+                <a href="/web115/fizzbuzz1.html">FizzBuzz 1</a>
+                <a href="/web115/fizzbuzz2.html">FizzBuzz 2</a>
+                <a href="/web115/fizzbuzz3.html">FizzBuzz 3</a>
+                <a href="/web115/fizzbuzz4.html">FizzBuzz 4</a>
+            </div>
+        </div>
     </nav>
 </header>
