Logo Home link fixed
updated the link for the home logo

--- a/web115/onepagesite/components/header.html
+++ b/web115/onepagesite/components/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1><a href="index.html" id="homeLogo"><img src="images/icon60h.svg"></a>Gina W's Gawky Wraith | WEB115
+    <h1><a href="/web115/index.html" id="homeLogo"><img src="images/icon60h.svg"></a>Gina W's Gawky Wraith | WEB115
     </h1>
     <p>Your Portal to Original RPG Maps</p>
     <nav>
