Added OnePageSite to Nav, Changed Nav margins
Added OnePageSite to Nav, and made nav margin smaller to take up less horizonal space

--- a/web115/components/header.html
+++ b/web115/components/header.html
@@ -17,5 +17,6 @@
                 <a href="fizzbuzz4.html">FizzBuzz 4</a>
             </div>
         </div>
+        <a href="/web115/onepagesite/index.html">OnePageSite</a>
     </nav>
 </header>
