--- a/web115/onepagesite/components/header.html
+++ b/web115/onepagesite/components/header.html
@@ -17,5 +17,6 @@
                 <a href="/web115/fizzbuzz4.html">FizzBuzz 4</a>
             </div>
         </div>
+        <a href="index.html">OnePageSite</a>
     </nav>
 </header>
