--- a/web115/styles/default.css
+++ b/web115/styles/default.css
@@ -123,7 +123,7 @@ header p:first-of-type {
 }
 
 hr {
-    margin: 3em 18em;
+    margin: 1em 18em;
     border: .15em solid #795548;
     border-radius: 50%;
 }
@@ -223,6 +223,30 @@ ul#colorsList li {
 /*-------------End m2 brand styles-------------*/
 
 /*-------------fizzbuzz styles-------------*/
+#submitButton,
+#resetButton {
+    max-width: 10em;
+    font-weight: bold;
+    color: #441c0c;
+    background-color: #F8B45C;
+    width: 36%;
+    margin: 1em .2em
+}
+
+#submitButton:hover,
+#resetButton:hover {
+    color: #B94527;
+    border: solid #B94527 .2em;
+    text-decoration: none;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+fieldset input {
+    padding: .3em;
+    border: #795548 solid .2em;
+    border-radius: 5em;
+}
+
 fieldset {
     margin-top: 1.5em;
     border: none;
@@ -241,17 +265,16 @@ div#loopColumns p:first-child {
 }
 
 div#loopColumns {
-    display:inline-block;
+    display: inline-block;
     margin: 0 auto;
     column-count: 3;
     line-height: 1.7em;
     gap: 5em;
-    margin-left: 3em;
 }
 
 p#loopText {
     text-align: left;
-    
+
 }
 
 /*-------------End fizzbuzz styles-------------*/
