--- a/web215/components/footer.html
+++ b/web215/components/footer.html
@@ -1,5 +1,6 @@
 <footer>
     <nav>
+        <hr>
         <a href="https://github.com/gwhitle">Github</a>
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web215">web215.io</a>
@@ -7,16 +8,13 @@
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
         <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+        <br>
+        <p>Page Designed by WhitsGits</p>
+        <hr>
+        <a href="http://validator.w3.org/check?uri=referer" id="validation_link_html" target="_blank"><img
+                src="images/html_validation_button.gif" alt="html validation"></a>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css" target="_blank"><img
+                src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
+        <script src="scripts/linkValidation.js"></script>
     </nav>
-    Bazzom bazang... we do the bestest!
-    <br />Designed by &copy; WhitGits
-    <br />
-    <a href="http://validator.w3.org/check?uri=referer" style="text-decoration: none">
-        <img src="images/html_validation_button.gif" alt="Validate HTML" />
-    </a>
-    <!-- you may need to change the name of your image link to match the one you 
-   uploaded -->
-    <a href="http://jigsaw.w3.org/css-validator/check/referer" style="text-decoration: none">
-        <img src="images/validation_button_css_rectangle_blue.gif" alt="Validate CSS" />
-    </a>
 </footer>
