--- a/web215/components/header.html
+++ b/web215/components/header.html
@@ -1,4 +1,11 @@
 <header>
     <h1>Gina W's Grunge Werewolf | WEB215</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="introduction.html">Introduction</a></li>
+            <li><a href="contract.html">Contract</a></li>
+        </ul>
+    </nav>
     <h2>Home</h2>
 </header>
