--- a/web215/components/footer.html
+++ b/web215/components/footer.html
@@ -3,7 +3,7 @@
         <a href="https://github.com/gwhitle">Github</a>
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web215">web215.io</a>
-        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+        <a href="https://www.freecodecamp.org/gwhitle">freeCodeCamp</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
         <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
