--- a/web215/components/header.html
+++ b/web215/components/header.html
@@ -1,5 +1,7 @@
 <header>
-    <h1>Gina W's Grunge Werewolf | WEB215</h1>
+    <h1><a href="index.html"><img src="images/icon1.svg" id="iconLogo"></a>Gina W's Grunge Werewolf | WEB215
+    </h1>
+    <p>Embrace the Moon, Discover the Myths</p>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
